DEV minor change to rowreorder words
Sync to source repo @d61d23ed9a81e7a7306a865758ed15f8c26ede00

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "files": [
         "js/**/*.js"
     ],
-    "main": "./js/dataTables.rowReorder.js",
+    "main": "js/dataTables.rowReorder.js",
     "keywords": [
         "row reordering",
         "DataTables",
