--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "js/**/*.js"
     ],
     "main": "js/dataTables.rowReorder.js",
+    "type": "types.d.ts",
     "keywords": [
         "row reordering",
         "DataTables",
@@ -27,5 +28,8 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/DataTables/Dist-DataTables-RowReorder.git"
+    },
+    "devDependencies": {
+        "@types/jquery": "^3.5.1"
     }
 }
