--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
     "name": "datatables.net-rowreorder",
+    "description": "RowReorder for DataTables",
+    "main": "js/dataTables.rowReorder.js",
     "version": "1.2.7",
-    "description": "RowReorder for DataTables ",
     "files": [
         "js/**/*.js"
     ],
-    "main": "js/dataTables.rowReorder.js",
-    "type": "types.d.ts",
     "keywords": [
-        "row reordering",
-        "DataTables",
+        "RowReorder",
+ "Row Reordering",
+        "Datatables",
         "jQuery",
         "table",
-        "DataTables"
+        "filter",
+        "sort"
     ],
-    "homepage": "https://datatables.net",
-    "bugs": "https://datatables.net/forums",
-    "license": "MIT",
+    "dependencies": {
+        "datatables.net": ">=1.10.24",
+        "jquery": ">=1.7"
+    },
+    "moduleType": [
+        "globals",
+        "amd",
+        "node"
+    ],
+    "ignore": [
+        "composer.json",
+        "datatables.json",
+        "package.json"
+    ],
     "author": {
         "name": "SpryMedia Ltd",
         "url": "http://datatables.net"
     },
-    "dependencies": {
-        "jquery": ">=1.7",
-        "datatables.net": "^1.10.15"
-    },
+    "homepage": "https://datatables.net",
+    "bugs": "https://datatables.net/forums",
+    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/DataTables/Dist-DataTables-RowReorder.git"
-    },
-    "devDependencies": {
-        "@types/jquery": "^3.5.1"
     }
 }
