--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "datatables.net-rowreorder",
     "description": "RowReorder for DataTables",
     "main": "js/dataTables.rowReorder.js",
+    "types": "./types/types.d.ts",
     "version": "1.2.7",
     "files": [
         "js/**/*.js"
