--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "description": "RowReorder for DataTables",
     "main": "js/dataTables.rowReorder.js",
     "types": "./types/types.d.ts",
-    "version": "1.2.7",
+    "version": "1.2.8",
     "files": [
         "js/**/*.js"
     ],
     "keywords": [
         "RowReorder",
- "Row Reordering",
+        "Row Reordering",
         "Datatables",
         "jQuery",
         "table",
@@ -17,8 +17,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net": ">=1.10.24",
-        "jquery": ">=1.7"
+        "jquery": ">=1.7",
+        "datatables.net": "^1.10.15"
     },
     "moduleType": [
         "globals",
