--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.2.7",
+    "version": "1.2.8",
     "name": "datatables.net/datatables.net-rowreorder",
     "description": "RowReorder adds end user reordering of rows in a DataTable through click-and-drag mouse and touch operations. RowReorder provides full support for Editor allowing end users to update sequential information in a fast and easy manner. This is RowReorder for DataTables",
     "support": {
@@ -26,6 +26,6 @@
         "table"
     ],
     "require": {
-        "datatables.net/datatables.net": ">=1.10.24"
+        "datatables.net/datatables.net": ">=1.10.26-dev"
     }
 }
