--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "types": "./types/types.d.ts",
     "version": "1.2.8",
     "files": [
-        "js/**/*.js"
+        "js/**/*.js",
+     "types/**/*.d.ts"
     ],
     "keywords": [
         "RowReorder",
