--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "datatables.net-rowreorder",
     "description": "RowReorder for DataTables",
     "main": "js/dataTables.rowReorder.js",
+    "module": "js/dataTables.rowReorder.mjs",
     "types": "./types/types.d.ts",
     "version": "1.2.8",
     "files": [
         "js/**/*.js",
+        "js/**/*.mjs",
         "types/**/*.d.ts"
     ],
     "keywords": [
